--- a/src/components/GameCanvas.css
+++ b/src/components/GameCanvas.css
@@ -1,10 +1,9 @@
 /* Canvas Wrapper - Contains overlay and canvas */
 .game-canvas-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   height: 100%;
+  flex-shrink: 0;
 }
 
 /* Canvas Overlay - Name and Stage */
